# region-price-monitor

./: .dockerignore  .env.example  .gitignore  BACKLOG.md  CLAUDE.md  COWORK.md  Dockerfile  Makefile  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/hooks/: block-secrets.sh  protect-main.sh  session-budget.sh  statusline.sh
.claude/rules/: commits.md  github-automation.md
.github/workflows/: claude.yml
app/: __init__.py  cli.py  config.py  db.py  enums.py  models.py  repositories.py
app/collectors/: __init__.py  base.py  fingerprint.py  measure.py  outcome.py  ozon.py  ozon_parse.py  pacing.py  wb.py  wb_parse.py
app/cookies/: __init__.py  base.py  fs.py  warm.py
app/io/: base.py  csv_io.py  db_io.py  factory.py  json_source.py  mapping.py  xlsx_io.py
app/obs/: __init__.py  alerts.py  (+2 more)
config/: cities.example.json  io.example.json
docker/: entrypoint.sh
docs/: ARCHITECTURE.md  DEVLOG.md  HANDOVER.md  OPS.md  ROADMAP.md  SPEC-panel.md  TZ.md  spike-report.md
migrations/: env.py  script.py.mako
prompts/: README.md  prompt-00-spike.md  prompt-01-skeleton.md  prompt-06-orchestration.md  prompt-09-script-shell-separation.md  prompt-15-cookies-tab.md  prompt-17-connection-tab.md
scripts/: dod.sh
spike/: check_ozon.py  check_ozon_cookies.py  check_price.py
tests/: test_alerts.py  test_cities_store.py  test_cli.py  test_connection_script.py  test_connection_script_db.py  test_cookie_store.py  test_cookies_address.py  test_cookies_script.py  test_fingerprint.py  test_healthcheck.py  test_io_csv.py  test_io_db.py  test_io_factory.py  test_io_json_backcompat.py  test_io_mapping.py  test_io_xlsx.py  test_local_end_to_end.py  test_logging.py  test_measure_wb.py  test_metrics.py  test_orchestrator.py  test_outcome.py  test_ozon_parse.py  test_pacing.py  test_panel_cities.py  test_panel_connection.py  test_panel_cookies.py  test_panel_dashboard.py  test_panel_placeholders.py  test_panel_run.py  test_proxy_health.py  test_proxy_static.py  test_queue.py  test_repositories.py  test_retry.py  test_runner.py  test_scripts_control_panel.py  test_scripts_export.py  test_scripts_health.py  test_scripts_ozon.py  (+6 more)
(+74 files in other folders)
